--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 
     <footer>
         <ul>
-            <li><a href="https://twitter.com/BaseDEX_BCD"><i class="bi bi-telegram"></i>Telegram</a></li>
+            <li><a href="https://t.me/BaseDEX_BCD"><i class="bi bi-telegram"></i>Telegram</a></li>
             <li><a href="https://twitter.com/BaseDEX_BCD"><i class="bi bi-twitter"></i>Twitter</a></li>
+            <li><a href="https://github.com/BaseDexBCD/BaseDEX"><i class="bi bi-github"></i>Github</a></li>
         </ul>
         <div class="credit">
             <p>Created by <a href="https://twitter.com/BaseDEX_BCD">BaseDEX Team</a>. | &copy; 2023.</p>
